src/main/java/com/example/writemymail/error/EmailNotFoundException.java
package com.example.writemymail.error;

public class EmailNotFoundException extends RuntimeException{
    public EmailNotFoundException(String message) {
        super(message);
    }
}
